# terminal-mouse-synchronization

./: Cargo.toml  README.md
src/: main.rs
